--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1161,7 +1161,7 @@ input, select, textarea {
 			background-image: url("../../images/thesan_lightcone.png");
 			background-position: center;
 			background-size: contain;
-			background-repeat: no-repeat;
+			background-repeat: round;
 			z-index: 1;
 		}
 
