--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,11 +252,22 @@ input, select, textarea {
 		top: -0.5rem;
 	}
 
-	blockquote {
+/* 	blockquote {
 		border-left: solid 4px #ffffff;
 		font-style: italic;
 		margin: 0 0 2rem 0;
 		padding: 0.5rem 0 0.5rem 2rem;
+	} */
+
+        blockquote
+	{
+	  font-style:normal;
+	  margin-left:32px;
+	  font-family:"Segoe Print", "Times New Roman", Verdana;
+	  padding-left: 48px;
+	  background:url('../images/blockquote.png');
+	  background-repeat:no-repeat;
+	  min-height: 30px;  
 	}
 
 	code {
