--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -261,6 +261,7 @@ input, select, textarea {
 
         blockquote
 	{
+	  border-left: solid 4px #ffffff;
 	  font-style:normal;
 	  margin-left:32px;
 	  font-family:"Segoe Print", "Times New Roman", Verdana;
