--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,7 @@ input, select, textarea {
 	}
 
 	p {
-		
+		font-weight:500;
 		margin: 0 0 2rem 0;
 	}
 
@@ -1377,8 +1377,9 @@ input, select, textarea {
 					line-height: 2.75rem;
 					padding: 0 1.25rem 0 1.45rem;
 					text-transform: uppercase;
-					letter-spacing: 0.4rem;
+					letter-spacing: 0.25rem;
 					font-size: 1.5rem;
+					font-weight:500;
 					border-bottom: 0;
 				}
 
