--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,10 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+/* #source_quote {
+      
+
+  } */
 
 /* Basic */
 
@@ -258,9 +262,12 @@ input, select, textarea {
 		border-left: solid 4px #ffffff;
 		font-family:"Segoe Print", "Times New Roman", Verdana;
 		font-style: italic;
+		background-color: rgba(0, 0, 0, 0.2);
+		color: rgb(231, 231, 130);
 		margin: 0 0 2rem 0;
 		padding: 0.5rem 0 0.5rem 2rem;
 	}
+    
 
 /*         blockquote
 	{
@@ -929,10 +936,12 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
-				height: 2.25rem;
-				line-height: 2.25rem;
+				height: 3rem;
+				line-height: 3rem;
 				text-align: center;
-				width: 2.25rem;
+				width: 3rem;
+				font-size: 2.2rem;
+				/* size: 3rem; */
 			}
 
 				ul.icons li a:hover {
@@ -1345,6 +1354,8 @@ input, select, textarea {
 
 			#header .content p {
 				text-transform: uppercase;
+				background-color: rgba(0, 0, 0, 0.2);
+				color: rgb(231, 231, 130);
 				letter-spacing: 0.2rem;
 				font-size: 0.8rem;
 				line-height: 2;
@@ -1379,6 +1390,8 @@ input, select, textarea {
 					padding: 0 1.25rem 0 1.45rem;
 					text-transform: uppercase;
 					letter-spacing: 0.1rem;
+					color: rgba(224, 224, 124, 1);
+					background-color: rgba(0, 0, 0, 0.507);
 					font-weight:600;
 					font-size: 1.5rem;
 					
@@ -1386,11 +1399,11 @@ input, select, textarea {
 				}
 
 					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.075);
+						background-color: rgba(255, 255, 255, 0.8);
 					}
 
 					#header nav ul li a:active {
-						background-color: rgba(255, 255, 255, 0.175);
+						background-color: rgba(255, 255, 255, 0.0001);
 					}
 
 		#header nav.use-middle:after {
@@ -1494,7 +1507,7 @@ input, select, textarea {
 					flex-direction: column;
 					min-width: 10rem;
 					max-width: 100%;
-				}
+				}#header .content
 
 					#header nav ul li {
 						border-left: 0;
