--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,7 +155,7 @@ input, select, textarea {
 		-moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+		transition: color 1s ease-in-out, background-color 1s ease-in-out, border-bottom-color 1s ease-in-out;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
 		text-decoration: none;
 		color: inherit;
@@ -205,15 +205,19 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2.5rem;
-		line-height: 1.5;
-		letter-spacing: 0.5rem;
+		font-weight: 400;
+		color: rgb(219, 162, 16);
+		font-family: Georgia, 'Times New Roman', Times, serif;
+		font-size: 2.7rem;
+		line-height: 1.3;
+		letter-spacing: 0.3rem;
 	}
 
 	h2 {
+		background-color: rgba(0, 0, 0, 0.0);
 		font-size: 1.3rem;
 		line-height: 1.4;
-		letter-spacing: 0.5rem;
+		letter-spacing: 0.2rem;
 	}
 
 	h3 {
@@ -236,12 +240,12 @@ input, select, textarea {
 
 		h1 {
 			font-size: 1.75rem;
-			line-height: 1.4;
+			line-height: 1;
 		}
 
 		h2 {
 			font-size: 1.25em;
-			line-height: 1.5;
+			line-height: 1;
 		}
 
 	}
@@ -936,11 +940,11 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
-				height: 3rem;
-				line-height: 3rem;
+				height: 2.5rem;
+				line-height: 2.5rem;
 				text-align: center;
-				width: 3rem;
-				font-size: 2.2rem;
+				width: 2.5rem;
+				font-size: 1.5rem;
 				/* size: 3rem; */
 			}
 
@@ -1178,10 +1182,10 @@ input, select, textarea {
 			-webkit-transform: scale(1.125);
 			-ms-transform: scale(1.125);
 			transform: scale(1.125);
-			-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
-			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
-			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
-			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+			-moz-transition: -moz-transform 0.4s ease-in-out, -moz-filter 0.4s ease-in-out;
+			-webkit-transition: -webkit-transform 0.4s ease-in-out, -webkit-filter 0.4s ease-in-out;
+			-ms-transition: -ms-transform 0.4s ease-in-out, -ms-filter 0.4s ease-in-out;
+			transition: transform 0.4s ease-in-out, filter 0.4s ease-in-out;
 			background-image: url("../../images/thesan_lightcone.png");
 			background-position: center;
 			background-size: cover;
@@ -1358,7 +1362,7 @@ input, select, textarea {
 				color: rgb(231, 231, 130);
 				letter-spacing: 0.2rem;
 				font-size: 0.8rem;
-				line-height: 2;
+				line-height: 1;
 			}
 
 		#header nav ul {
@@ -1399,7 +1403,7 @@ input, select, textarea {
 				}
 
 					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.8);
+						background-color: rgba(255, 255, 255, 0.3);
 					}
 
 					#header nav ul li a:active {
@@ -1433,23 +1437,24 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		body.is-preload #header {
+	  	 /* body.is-preload #header {
 			-moz-filter: blur(0.125rem);
 			-webkit-filter: blur(0.125rem);
 			-ms-filter: blur(0.125rem);
-			filter: blur(0.125rem);
-		}
 
-			body.is-preload #header > * {
+			filter: blur(0.125rem);
+		}  */
+
+			/* body.is-preload #header > * {
 				opacity: 0;
-			}
+			}  */
 
 			body.is-preload #header .content .inner {
 				max-height: 0;
 				padding-top: 0;
 				padding-bottom: 0;
 				opacity: 0;
-			}
+			} 
 
 		@media screen and (max-width: 980px) {
 
