--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,7 +266,7 @@ input, select, textarea {
 		border-left: solid 4px #ffffff;
 		font-family:"Segoe Print", "Times New Roman", Verdana;
 		font-style: italic;
-		background-color: rgba(0, 0, 0, 0.2);
+		background-color: rgba(0, 0, 0, 0.7);
 		color: rgb(231, 231, 130);
 		margin: 0 0 2rem 0;
 		padding: 0.5rem 0 0.5rem 2rem;
@@ -1159,15 +1159,15 @@ input, select, textarea {
 		}
 
 		#bg:before {
-			-moz-transition: background-color 2.5s ease-in-out;
-			-webkit-transition: background-color 2.5s ease-in-out;
-			-ms-transition: background-color 2.5s ease-in-out;
-			transition: background-color 2.5s ease-in-out;
-			-moz-transition-delay: 0.75s;
-			-webkit-transition-delay: 0.75s;
-			-ms-transition-delay: 0.75s;
-			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
+			-moz-transition: background-color 5s ease-in-out;
+			-webkit-transition: background-color 5s ease-in-out;
+			-ms-transition: background-color 5s ease-in-out;
+			transition: background-color 5s ease-in-out;
+			-moz-transition-delay: 4s;
+			-webkit-transition-delay: 4s;
+			-ms-transition-delay: 4s;
+			transition-delay: 4s;
+			background-image: linear-gradient(to right, rgba(19, 21, 25, 0.3), rgba(19, 21, 25, 0.3));
 			background-size: auto,
  256px 256px;
 			background-position: center,
@@ -1339,14 +1339,14 @@ input, select, textarea {
 		}
 
 			#header .content .inner {
-				-moz-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-webkit-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-ms-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-moz-transition-delay: 0.25s;
-				-webkit-transition-delay: 0.25s;
-				-ms-transition-delay: 0.25s;
-				transition-delay: 0.25s;
+				-moz-transition: max-height 3.5s ease, padding 4s ease, opacity 0.325s ease-in-out;
+				-webkit-transition: max-height 3.5s ease, padding 4s ease, opacity 0.325s ease-in-out;
+				-ms-transition: max-height 3.5s ease, padding 4s ease, opacity 0.325s ease-in-out;
+				transition: max-height 3.5s ease, padding 4s ease, opacity 0.325s ease-in-out;
+				-moz-transition-delay: 0.75s;
+				-webkit-transition-delay: 0.75s;
+				-ms-transition-delay: 0.75s;
+				transition-delay: 0.75s;
 				padding: 3rem 2rem;
 				max-height: 40rem;
 				overflow: hidden;
@@ -1358,7 +1358,7 @@ input, select, textarea {
 
 			#header .content p {
 				text-transform: uppercase;
-				background-color: rgba(0, 0, 0, 0.2);
+				background-color: rgba(0, 0, 0, 0.7);
 				color: rgb(231, 231, 130);
 				letter-spacing: 0.2rem;
 				font-size: 0.8rem;
@@ -1388,16 +1388,17 @@ input, select, textarea {
 
 				#header nav ul li a {
 					display: block;
-/* 					min-width: 7.5rem; */
-					height: 2.75rem;
-					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
+					
+					min-width: 9rem;
+					height: 2.5rem;
+					line-height: 2.5rem;
+					padding: 0rem 0rem 0rem 0;
 					text-transform: uppercase;
 					letter-spacing: 0.1rem;
-					color: rgba(224, 224, 124, 1);
-					background-color: rgba(0, 0, 0, 0.507);
+					color: rgb(224, 224, 104);
+					background-color: rgba(0, 0, 0, 0.7);			
 					font-weight:600;
-					font-size: 1.5rem;
+					font-size: 1.2rem;
 					
 					border-bottom: 0;
 				}
@@ -1416,6 +1417,7 @@ input, select, textarea {
 			position: absolute;
 			top: 0;
 			left: calc(50% - 1px);
+			/* left: 0; */
 			width: 1px;
 			height: 100%;
 			background: #ffffff;
@@ -1437,17 +1439,17 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-	  	 /* body.is-preload #header {
+	  	body.is-preload #header {
 			-moz-filter: blur(0.125rem);
 			-webkit-filter: blur(0.125rem);
 			-ms-filter: blur(0.125rem);
 
 			filter: blur(0.125rem);
-		}  */
+		} 
 
-			/* body.is-preload #header > * {
+		    body.is-preload #header > * {
 				opacity: 0;
-			}  */
+			} 
 
 			body.is-preload #header .content .inner {
 				max-height: 0;
