--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,13 +263,14 @@ input, select, textarea {
 	}
 
 	blockquote {
-		border-left: solid 4px #ffffff;
+		/* border-left: solid 4px #ffffff; */
+		border-left: solid 1px #ffffff;
 		font-family:"Segoe Print", "Times New Roman", Verdana;
 		font-style: italic;
 		background-color: rgba(0, 0, 0, 0.7);
 		color: rgb(231, 231, 130);
-		margin: 0 0 2rem 0;
-		padding: 0.5rem 0 0.5rem 2rem;
+		margin: 0 0rem 0rem 0;
+		padding: 0rem 0rem 0rem -4rem;
 	}
     
 
@@ -1400,7 +1401,7 @@ input, select, textarea {
 					font-weight:600;
 					font-size: 1.2rem;
 					
-					border-bottom: 0;
+					border-bottom: solid 1px #ffffff;
 				}
 
 					#header nav ul li a:hover {
