--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,8 +269,9 @@ input, select, textarea {
 		font-style: italic;
 		background-color: rgba(0, 0, 0, 0.7);
 		color: rgb(231, 231, 130);
-		margin: 0 0rem 0rem 0;
-		padding: 0rem 0rem 0rem -4rem;
+		font-size: 0.6 rem;
+		margin: 0 0rem 1rem 0;
+		padding: 0rem 0rem 0rem 0rem;
 	}
     
 
