--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -733,10 +733,11 @@ input, select, textarea {
 			width: 100%;
 		}
 		.image.round {
+			/* object-fit:cover; */
 			display: inline-block;
-			margin: 0.1rem 0rem 0rem 0rem ;
-			width: 7.6rem;
-			height: 7.6rem;
+			margin: 0.05rem 0rem 0rem 0rem ;
+			width: 7.8rem;
+			height: 7.8rem;
 			overflow: hidden;
 			border-radius: 80%;
 			/* align:middle; */
@@ -748,7 +749,9 @@ input, select, textarea {
 			}
 			.image.round img {
 				vertical-align: middle;
-				width: 8rem;
+				position:relative;
+				width: 7.8rem;
+				
 				/* padding: 0rem 0rem 0rem 0rem; */
 			    /* margin : 0rem 0rem 0rem 0rem; */
 				
@@ -764,13 +767,14 @@ input, select, textarea {
 			}
 			.image.round {
 				display: inline-block;
-				margin: 0.2rem 0rem 0rem 0rem ;
-				width: 7.5rem;
-				height: 7.5rem;
+				margin: 0.05rem 0rem 0rem 0rem ;
+				width: 7.8rem;
+				height: 7.8rem;
 				overflow: hidden;
 				border-radius: 80%;
 			}
 			.image.round img {
+				position: relative;
 				vertical-align: middle;
 				width: 8rem;
 				/* padding: 0rem 0rem 0rem 0rem; */
@@ -789,13 +793,14 @@ input, select, textarea {
 			}
 			.image.round {
 				display: inline-block;
-				margin: 0.2rem 0rem 0rem 0rem ;
-				width: 7.5rem;
-				height: 7.5rem;
+				margin: 0.05rem 0rem 0rem 0rem ;
+				width: 7.8rem;
+				height: 7.8rem;
 				overflow: hidden;
 				border-radius: 80%;
 			}
 			.image.round img {
+				position: relative;
 				vertical-align: middle;
 				width: 8rem;
 				/* padding: 0rem 0rem 0rem 0rem; */
