--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,8 @@ input, select, textarea {
 		font-size: 3rem;
 		text-transform: uppercase;
 		line-height: 1.3;
-		letter-spacing: 0.3rem;
+		word-spacing: 0.7rem;
+		letter-spacing: 0.05rem;
 	}
 
 	h2 {
@@ -1006,12 +1007,13 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
-				height: 2.5rem;
-				line-height: 2.5rem;
+				height: 1.9rem;
+				width: 1.9rem;
+				line-height: 2rem;
 				background-color: rgba(0, 0, 0, 0.85);
 				text-align: center;
-				width: 2.5rem;
-				font-size: 1.5rem;
+				
+				font-size: 1.2rem;
 				/* size: 3rem; */
 			}
 
@@ -1234,7 +1236,7 @@ input, select, textarea {
 			-webkit-transition-delay: 2.5s;
 			-ms-transition-delay: 2.5s;
 			transition-delay: 2.5s;
-			background-image: linear-gradient(to right, rgba(19, 21, 25, ), rgba(19, 21, 25, 0.7));
+			background-image: linear-gradient(to top, rgba(19, 21, 25,0.9), rgba(19, 21, 25, 0.4));
 			background-size: auto,
  256px 256px;
 			background-position: center,
