--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -631,8 +631,20 @@ input, select, textarea {
 			border-radius: 0;
 			padding: 0;
 		}
-
+	.column {
+		float: left;
+		width: 33.33%;
+		padding: 5px;
+		}
+		
+		/* Clear floats after image containers */
+		.row::after {
+		content: "";
+		clear: both;
+		display: table;
+		}
 /* Icon */
+    
 
 	.icon {
 		text-decoration: none;
