--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -631,7 +631,19 @@ input, select, textarea {
 			border-radius: 0;
 			padding: 0;
 		}
-	.column {
+	.column2 {
+		float: left;
+		width: 50%;
+		padding: 5px;
+		}
+		
+		/* Clear floats after image containers */
+		.row::after {
+		content: "";
+		clear: both;
+		display: table;
+		}
+	.column3 {
 		float: left;
 		width: 33.33%;
 		padding: 5px;
